assets/css/main.pcss
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Black.otf");
  font-weight: 900;
}

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Bold.otf");
  font-weight: 700;
}

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Medium.otf");
  font-weight: 500;
}

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Regular.otf");
  font-weight: 400;
}

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Light.otf");
  font-weight: 300;
}

@font-face {
  font-family: "Gemsbuck";
  src: url("./fonts/Gemsbuck-01-Thin.otf");
  font-weight: 100;
}

:root {
  --border-color: #0099ffff;
  --logo-color: #0099ff;
  --p: 66.9% 0.18367957892697165 248.8066094258165;
  --text: hsl(194, 100%, 40%);
  --pc: var(--b1);
  --pf: var(--p);
  --bc: var(--b1);
  --b1-trans: hsla(212, 18%, 14%, 0.3);
  --b1-nav: hsla(213, 18%, 12%, 0.8);
}

.body {
  @apply bg-[length:140%_140%] bg-gradient-to-tr from-slate-950 via-slate-950 to-cyan-950 text-[var(--text)];
  font-family: "Gemsbuck";
}

.logo {
  @apply fill-[var(--logo-color)] text-sm;
}

.logo-footer {
  @apply fill-[var(--logo-color)] text-sm;
}

.svg5-logo {
  @apply w-32 md:w-36 h-fit;
}

.svg5-footer {
  @apply w-24 h-fit;
}

.bg {
  stroke: hsl(var(--p));
}

.btn {
  @apply uppercase;
}

.btn-primary {
  @apply text-slate-950;
}

.input {
  @apply bg-slate-900;
}

.input:focus {
  @apply outline-0;
}

